installing packages and setting up main navigation and store implementations

--- a/app/app.json
+++ b/app/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "app",
+    "name": "AnchorMe",
+    "slug": "anchorme-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/anchor-logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#7fcdff"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
