--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.1",
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
