--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,9 @@
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~38.0.8",
+    "expo-localization": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "i18next": "^19.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
