added data to db, implemented differentiation for user and admin profile screens

--- a/api/AnchorMe.EntityFramework/AnchorMe.EntityFramework.csproj
+++ b/api/AnchorMe.EntityFramework/AnchorMe.EntityFramework.csproj
@@ -74,6 +74,9 @@
     <Compile Include="EF\UserData.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="EF\UserRole.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Implementations\UserDataRepository.cs" />
     <Compile Include="Repositories\Interfaces\IUserDataRepository.cs" />
