--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.2.1",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/checkbox": "^0.5.6",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "expo": "~38.0.8",
