implemented map with markers

--- a/api/AnchorMe.Services.Messaging/AnchorMe.Services.Messaging.csproj
+++ b/api/AnchorMe.Services.Messaging/AnchorMe.Services.Messaging.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Auth\Login.cs" />
+    <Compile Include="Harbours\GetAllHarbours.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\HarbourVM.cs" />
     <Compile Include="ViewModels\LoggedUserVM.cs" />
   </ItemGroup>
   <ItemGroup>
