--- a/api/AnchorMe.Services/AnchorMe.Services.csproj
+++ b/api/AnchorMe.Services/AnchorMe.Services.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Implementations\AuthService.cs" />
+    <Compile Include="Implementations\HarbourService.cs" />
     <Compile Include="Interfaces\IAuthService.cs" />
+    <Compile Include="Interfaces\IHarbourService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
