--- a/api/AnchorMe.EntityFramework/AnchorMe.EntityFramework.csproj
+++ b/api/AnchorMe.EntityFramework/AnchorMe.EntityFramework.csproj
@@ -53,6 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EF\City.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EF\Country.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="EF\DBModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -68,6 +74,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DBModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="EF\Harbour.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="EF\LoginCredentials.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
@@ -78,7 +87,9 @@
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\Implementations\HarbourRepository.cs" />
     <Compile Include="Repositories\Implementations\UserDataRepository.cs" />
+    <Compile Include="Repositories\Interfaces\IHarbourRepository.cs" />
     <Compile Include="Repositories\Interfaces\IUserDataRepository.cs" />
     <Compile Include="Repositories\RepositoryFactory.cs" />
   </ItemGroup>
