--- a/app/package.json
+++ b/app/package.json
@@ -34,7 +34,8 @@
     "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-maps": "0.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
