--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/checkbox": "^0.5.6",
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "expo": "~38.0.8",
@@ -19,14 +20,17 @@
     "expo-status-bar": "^1.0.2",
     "i18n-js": "^3.8.0",
     "lodash.memoize": "^4.1.2",
+    "moment": "^2.29.1",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.6.0",
@@ -34,8 +38,7 @@
     "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-native-maps": "0.27.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
