--- a/api/AnchorMe.Services.Messaging/AnchorMe.Services.Messaging.csproj
+++ b/api/AnchorMe.Services.Messaging/AnchorMe.Services.Messaging.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Auth\Login.cs" />
+    <Compile Include="Base\Base.cs" />
     <Compile Include="Harbours\GetAllHarbours.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reservations\MakeReservation.cs" />
     <Compile Include="ViewModels\HarbourVM.cs" />
     <Compile Include="ViewModels\LoggedUserVM.cs" />
   </ItemGroup>
