--- a/api/AnchorMe.Services/AnchorMe.Services.csproj
+++ b/api/AnchorMe.Services/AnchorMe.Services.csproj
@@ -43,8 +43,11 @@
   <ItemGroup>
     <Compile Include="Implementations\AuthService.cs" />
     <Compile Include="Implementations\HarbourService.cs" />
+    <Compile Include="Implementations\ReservationService.cs" />
     <Compile Include="Interfaces\IAuthService.cs" />
     <Compile Include="Interfaces\IHarbourService.cs" />
+    <Compile Include="Interfaces\IReservationService.cs" />
+    <Compile Include="ObjectFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
