--- a/api/AnchorMe.Services.Messaging/AnchorMe.Services.Messaging.csproj
+++ b/api/AnchorMe.Services.Messaging/AnchorMe.Services.Messaging.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Base\Base.cs" />
     <Compile Include="Harbours\GetAllHarbours.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reservations\GetReservationsForUser.cs" />
     <Compile Include="Reservations\MakeReservation.cs" />
     <Compile Include="ViewModels\HarbourVM.cs" />
     <Compile Include="ViewModels\LoggedUserVM.cs" />
+    <Compile Include="ViewModels\ReservationVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AnchorMe.EntityFramework\AnchorMe.EntityFramework.csproj">
