--- a/app/package.json
+++ b/app/package.json
@@ -27,9 +27,13 @@
     "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.27.1",
+    "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-star-rating-view": "0.0.12",
+    "react-native-stars": "^1.2.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
