--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
+    "@react-native-picker/picker": "^1.9.11",
     "expo": "~38.0.8",
     "expo-localization": "~8.2.1",
     "expo-status-bar": "^1.0.2",
